# sonar-server/docs/swagger.json
@@ -28,22 +28,22 @@
       }
     },
     {
-      "name": "island",
-      "description": "Island management"
+      "name": "group",
+      "description": "Group management"
     }
   ],
   "schemes": [
     "http"
   ],
   "paths": {
-    "/{island}/db": {
+    "/{group}/db": {
       "put": {
         "tags": [
           "db"
         ],
         "summary": "Put a record into the database",
         "description": "",
-        "operationId": "island.put",
+        "operationId": "group.put",
         "consumes": [
           "application/json"
         ],
@@ -52,9 +52,9 @@
         ],
         "parameters": [
           {
-            "name": "island",
+            "name": "group",
             "in": "path",
-            "description": "Island key or name",
+            "description": "Group key or name",
             "required": true,
             "type": "string"
           },
@@ -80,13 +80,13 @@
         ]
       }
     },
-    "/{island}/_query/{name}": {
+    "/{group}/_query/{name}": {
       "post": {
         "tags": [
           "db"
         ],
         "summary": "Query the database",
-        "operationId": "island.query",
+        "operationId": "group.query",
         "consumes": [
           "application/json"
         ],
@@ -95,9 +95,9 @@
         ],
         "parameters": [
           {
-            "name": "island",
+            "name": "group",
             "in": "path",
-            "description": "Island key or name",
+            "description": "Group key or name",
             "required": true,
             "type": "string"
           },
